# CPP-Projects

./: .gitignore
BaseProject/: CMakeLists.txt
BaseProject/src/: CMakeLists.txt
BaseProject/src/LinkedList/: Node.cpp  Node.hpp
BaseProject/tests/: CMakeLists.txt
Fibonacci/: CMakeLists.txt  main.cpp
LinkedList/src/: CMakeLists.txt  main.cpp
LinkedList/src/LinkedList/: LinkedList.cpp  LinkedList.hpp  Node.cpp
LinkedList/tests/: CMakeLists.txt  LinkedListTests.cpp  NodeTests.cpp  main.cpp
PhotoProject/: CMakeLists.txt
PhotoProject/src/: CMakeLists.txt  main.cpp
PhotoProject/src/FileHandler/: FileHandler.hpp
